--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,14 @@ password.policy.error=Password does not meet password policy
 user.not.eligible=User is not eligible to register
 user.eligible.message=Welcome {0} of {1}. Your registration is accepted!
 password.pattern=^(?!.* )(?=.*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[_#$%.]).{8,}$
+
+# Open API config
+open.api.title=User Registration API
+open.api.version=1.0.0
+open.api.description=User Registration for Canada users
+open.api.contact.name=Rahul
+open.api.contact.email=rahul@abc.com
+open.api.contact.url=http://www.myorg.com
+#open.api.swagger.enable=true
+springdoc.swagger-ui.path=/openapi/swagger-ui.html
+
